ProgMicro/PdM_workspace-main/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
07:17:56 **** Incremental Build of configuration Debug for project Practica1 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F429ZITx -DSTM32F4 -DNUCLEO_F429ZI -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Inc -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/STM32F4xx_HAL_Driver/Inc" -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/CMSIS/Include" -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/BSP/STM32F4xx_Nucleo_144" -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/Core/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "Practica1.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/STM32F429ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Practica1.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Practica1.elf
 
arm-none-eabi-size   Practica1.elf 
arm-none-eabi-objdump -h -S  Practica1.elf  > "Practica1.list"
   text	   data	    bss	    dec	    hex	filename
   6804	     36	   1572	   8412	   20dc	Practica1.elf
Finished building: default.size.stdout
 
Finished building: Practica1.list
 
07:18:07 **** Incremental Build of configuration Debug for project Practica1 ****
make -j8 all 
arm-none-eabi-size   Practica1.elf 
   text	   data	    bss	    dec	    hex	filename
   6804	     36	   1572	   8412	   20dc	Practica1.elf
Finished building: default.size.stdout
 
07:22:18 **** Incremental Build of configuration Debug for project Ej1_pushButton ****
make -j8 all 
arm-none-eabi-size   Ej1_pushButton.elf 
   text	   data	    bss	    dec	    hex	filename
   6640	     36	   1572	   8248	   2038	Ej1_pushButton.elf
Finished building: default.size.stdout
 
07:22:20 **** Incremental Build of configuration Debug for project Practica1 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F429ZITx -DSTM32F4 -DNUCLEO_F429ZI -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Inc -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/STM32F4xx_HAL_Driver/Inc" -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/CMSIS/Include" -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/BSP/STM32F4xx_Nucleo_144" -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/Core/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "Practica1.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/STM32F429ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Practica1.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Practica1.elf
 
arm-none-eabi-size   Practica1.elf 
arm-none-eabi-objdump -h -S  Practica1.elf  > "Practica1.list"
   text	   data	    bss	    dec	    hex	filename
   6800	     36	   1572	   8408	   20d8	Practica1.elf
Finished building: default.size.stdout
 
Finished building: Practica1.list
 
07:22:33 **** Incremental Build of configuration Debug for project Ej1_pushButton ****
make -j8 all 
arm-none-eabi-size   Ej1_pushButton.elf 
   text	   data	    bss	    dec	    hex	filename
   6640	     36	   1572	   8248	   2038	Ej1_pushButton.elf
Finished building: default.size.stdout
 
07:22:34 **** Incremental Build of configuration Debug for project Practica1 ****
make -j8 all 
arm-none-eabi-size   Practica1.elf 
   text	   data	    bss	    dec	    hex	filename
   6800	     36	   1572	   8408	   20d8	Practica1.elf
Finished building: default.size.stdout
 
07:22:42 **** Incremental Build of configuration Debug for project Practica1 ****
make -j8 all 
arm-none-eabi-size   Practica1.elf 
   text	   data	    bss	    dec	    hex	filename
   6800	     36	   1572	   8408	   20d8	Practica1.elf
Finished building: default.size.stdout
 
07:26:42 **** Incremental Build of configuration Debug for project Ej1_pushButton ****
make -j8 all 
arm-none-eabi-size   Ej1_pushButton.elf 
   text	   data	    bss	    dec	    hex	filename
   6640	     36	   1572	   8248	   2038	Ej1_pushButton.elf
Finished building: default.size.stdout
 
07:26:44 **** Incremental Build of configuration Debug for project Practica1 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F429ZITx -DSTM32F4 -DNUCLEO_F429ZI -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Inc -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/STM32F4xx_HAL_Driver/Inc" -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/CMSIS/Include" -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/BSP/STM32F4xx_Nucleo_144" -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/Core/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:96:44: error: lvalue required as left operand of assignment
   96 |     sequence == 0? sequence = 1 : sequence = 0;
      |                                            ^
make: *** [Src/subdir.mk:19: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
07:27:34 **** Incremental Build of configuration Debug for project Ej1_pushButton ****
make -j8 all 
arm-none-eabi-size   Ej1_pushButton.elf 
   text	   data	    bss	    dec	    hex	filename
   6640	     36	   1572	   8248	   2038	Ej1_pushButton.elf
Finished building: default.size.stdout
 
07:27:36 **** Incremental Build of configuration Debug for project Practica1 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F429ZITx -DSTM32F4 -DNUCLEO_F429ZI -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Inc -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/STM32F4xx_HAL_Driver/Inc" -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/CMSIS/Include" -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/BSP/STM32F4xx_Nucleo_144" -I"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/Drivers/Core/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "Practica1.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/denis/Documentos/CESE/ProgMicro/PdM_workspace-main/Practica1/STM32F429ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Practica1.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Practica1.elf
 
arm-none-eabi-size   Practica1.elf 
arm-none-eabi-objdump -h -S  Practica1.elf  > "Practica1.list"
   text	   data	    bss	    dec	    hex	filename
   6812	     36	   1572	   8420	   20e4	Practica1.elf
Finished building: default.size.stdout
 
Finished building: Practica1.list
 
07:27:46 **** Incremental Build of configuration Debug for project Practica1 ****
make -j8 all 
arm-none-eabi-size   Practica1.elf 
   text	   data	    bss	    dec	    hex	filename
   6812	     36	   1572	   8420	   20e4	Practica1.elf
Finished building: default.size.stdout
 
